--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,9 @@ repositories {
 
 dependencies {
     testImplementation 'junit:junit:4.13.2'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.1'
 }
 
 test {
-    useJUnit()
+    useJUnitPlatform()
 }
